--- a/style.css
+++ b/style.css
@@ -1,87 +1,174 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    overflow: hidden;
-    font-family:Arial, Helvetica, sans-serif;
 }
 
-form{
-    margin:40px;
+body {
+    font-size: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.img1{
-    width: 550px;
-    margin-top: 30px;
-}
-
-.flex{
+nav {
+    width: 100%;
+    height: 15vh;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 }
 
-form{
-    margin-left:100px;
+nav img {
+    width: 150px;
 }
 
-input{
-    padding: 5px 90px 5px 5px;
+
+li{
+  list-style:none;
+}
+
+
+.prefixes{
+  border: 1px solid blue;
+  width:43%;
+  border-radius:10px;
+  display: none;
+  
+}
+
+.prefix-link{
+  padding:5px;
+}
+
+.prefix-link:hover{
+  background-color:#2020cf
+}
+
+
+nav ul li {
+    display: inline-block;
+    padding: 20px;
+}
+
+nav a {
+    font-size: 23px;
+    text-decoration: none;
+    color: #000;
+}
+
+li:hover{
+  color: green;
+}
+
+.app {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.img1 {
+    width: 500px;
+    margin-top: 30px;
+}
+
+.xcel-form {
+    width: 50%;
+}
+
+/* form {
+    width: 80%;
+    padding: 10px;
+} */
+
+form label {
+    display: block;
+}
+
+label{
+  font-size: 15px;
+  padding:5px 0px;
+}
+
+
+input {
+    width: 60%;
+    display: block;
+    border: 1px solid blue;
+    padding: 10px 90px 10px 5px;
     border-radius: 5px;
-    border: rgb(110, 75, 248) 1px solid;
 }
 
-input:hover{
-    border: color #000;;
+input:hover {
+    border: color #000;
 }
 
-input:invalid{
-    border: color rgb(251, 49, 49);
-}
-.img2{
+
+.img2 {
     width: 60px;
     border-radius: 50%;
     border-top: 10px;
 }
 
-h2{
-    text-align: center;
-    font-size:20px;
+.title {
+    font-size: 40px;
+    padding: 10px 0px;
 }
 
-.h2{
-    margin-bottom: 5px;
+.xcel-subtitle {
+    font-size: 20px;
+    padding: 10px 0px;
+    margin-top: -25px;
+      max-width: 500px;
 }
 
-button{
-    background-color: #fff;
-    padding: 5px 10px 5px 5px;
-    margin: 10px 5px;
+form .verify-content{
+    width: 100%;
+    display: flex;
+}
+
+button {
+    width: 200px;
+    font-size: 18px;
+    background-color: green;
+    padding: 7px;
+    color: white;
+    border: none;
     border-radius: 5px;
-    border: rgb(99, 232, 99) 1px solid;
+    cursor: pointer;
 }
 
-button:hover{
-    border-color: rgb(100, 65, 241);
+button:hover {
+    transition: .2s all;
+    color: #000;
+/*     background: white; */
 }
 
-.btn{
-    padding: 5px 35px;
-    text-align: center;
-    
+.verify-btn{
+    width: 100px;
+    margin-left: 20px;
 }
 
-.header{
-    margin:80px 0px 10px 0px;
-    
+option{
+  text-align:center;
 }
 
-.input{
-    margin-bottom: 10px;
-}
-
-#mobileoperator{
-    padding: 5px 50px 5px 5px;
+#mobileoperator {
+    width: 60%;
+    padding:5px 0;
     border-radius: 5px;
-    border: rgb(100, 65, 241) 1px solid ;
+    border: rgb(100, 65, 241) 1px solid;
+}
+
+.number-input{
+  width:43%;
+}
+
+.mtn-dropdown{
+  display:none;
+}
+
+#result>img{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
 }
